# backend/restaurant/controller.ts
@@ -2,6 +2,7 @@ import type { Request, Response } from "express";
 import SendResponse from "../libs/response-helper";
 import paginate from "../utils/pagination";
 import RestaurantModel from "./model";
+import MenuModel from "../menu/model";
 
 const RestaurantController = {
 	async all(req: Request, res: Response): Promise<void> {
@@ -37,6 +38,18 @@ const RestaurantController = {
 			SendResponse.serverError(res, error.message);
 		}
 	},
+
+	async menu(req: Request, res: Response): Promise<void> {
+		const restaurant = res.locals.restaurantItem as any;
+		const menuItems = await MenuModel.find({ parent: restaurant.publicId });
+
+		try {
+			SendResponse.success(res, "Restaurant menu retrieved", menuItems);
+
+		} catch (error: any) {
+			SendResponse.serverError(res, error.message);
+		}
+	}
 };
 
 export default RestaurantController;
